--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "homepage": "",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
