--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prop-types": "^15.7.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "rebass": "^4.0.7",
     "us-forms-system": "^1.1.0",
     "uswds": "^1.6.12"
   }
