--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-react": "^7.9.4",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
@@ -29,31 +29,33 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-no-unsafe-innerhtml": "^1.0.14",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-scanjs-rules": "^0.1.4",
     "eslint-stats": "^1.0.0",
     "mocha": "^5.2.0",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^16.13.1",
     "skin-deep": "^1.0.0",
     "style-loader": "^0.21.0",
     "svg-url-loader": "^2.3.3",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.35.3",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "events": "^3.1.0",
     "prop-types": "^15.7.2",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.3.0",
+    "react-dom": "^16.13.1",
     "rebass": "^4.0.7",
+    "timers-browserify": "^2.0.11",
     "us-forms-system": "^1.1.0",
-    "uswds": "^1.6.12"
+    "uswds": "^1.6.13"
   }
 }
